[package]
name = "net-mux"
version = "0.2.4"
authors = ["Poseidon <18646154381@163.com>"]
edition = "2024"
description = "A Net Stream Multiplexing Library"
documentation = "https://docs.rs/net-mux"
readme = "README.md"
repository = "https://github.com/poseidon-fan/net-mux"
license = "MIT"
keywords = ["net", "multiplexing", "async", "tokio"]
categories = ["asynchronous", "network-programming"]
exclude = [".devcontainer/"]

[dependencies]
thiserror = "2"
tokio = { version = "1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "io-util",
    "time",
    "parking_lot",
] }
futures-util = { version = "0.3.31", features = ["sink"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
parking_lot = "0.12.5"
bitflags = "2.10.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
